<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">WYDATKI</string>
    <string name="no_outcomes">Nie masz zapisanych wydatków</string>
    <string name="menu_insert">Dodaj Wydatek</string>
    <string name="menu_delete">Usuń Wydatek</string>
    <string name="wydatek_description">Usun Wydatek</string>
    <string name="wydatek_name">Nazwa Wydatku</string>
    <string name="wydatek_date">Data Wydatku</string>
    <string name="wydatek_type">Typ Wydatku</string>
    <string name="wydatek_value">Wartość Wydatku</string>
    <string name="wydatek_confirm">Potwierdź</string>
    <string name="spinner_title">Typ wydatku</string>
</resources> 