<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

        <EditText
            android:id="@+id/wydatek_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/wydatek_name"
            android:imeOptions="actionNext" >
        </EditText>

         <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"
            android:tag="@string/spinner_title"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
         />

        <EditText
            android:id="@+id/wydatek_type_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/wydatek_type"
            android:imeOptions="actionNext" >
        </EditText>

        <EditText
            android:id="@+id/wydatek_date_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/wydatek_date"
            android:imeOptions="actionNext" >
        </EditText>

        <EditText
            android:id="@+id/wydatek_value_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/wydatek_value"
            android:imeOptions="actionNext" >
        </EditText>


    <Button
        android:id="@+id/wydatek_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wydatek_confirm" >
    </Button>


</LinearLayout>